objects/CRM_EncounterHospitalJuntion__c.object
<CustomObject>
    <description>This object will stores selected hospitals records detail on Encounter screen</description>
    <fields>
        <fullName>CRM_CampaignLocationMapping__c</fullName>
        <label>Campaign Location Reference Data</label>
        <referenceTo>CRM_CampaignLocationReferenceData__c</referenceTo>
        <relationshipLabel>Encounters Hospital Junction</relationshipLabel>
        <relationshipName>Encounters_Hospital_Junction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRM_Encounter__c</fullName>
        <label>Encounter</label>
        <referenceTo>Encounter__c</referenceTo>
        <relationshipLabel>Encounters Hospital Junction</relationshipLabel>
        <relationshipName>Encounters_Hospital_Junction</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRM_Hospital__c</fullName>
        <formula>CRM_CampaignLocationMapping__r.CRM_Hospital__c</formula>
        <label>Hospital</label>
        <type>Text</type>
    </fields>
    <label>Encounter Hospital Juntion</label>
    <nameField>
        <displayFormat>EH-{0000}</displayFormat>
        <label>Encounter Hospital Juntion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Encounters Hospital Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>